# collector-watcher

./: .gitignore  .pre-commit-config.yaml  README.md  changes.json  generate_docs_local.py  pyproject.toml  requirements.txt  ruff.toml  validate_workflow.sh
.github/workflows/: README.md  ci.yml  monitor.yml  update-docs.yml
collector-metadata/contrib/v0.0.1-SNAPSHOT/: connector.yaml  exporter.yaml  extension.yaml  processor.yaml  receiver.yaml
data/: inventory.yaml
data/inventory/: connector.yaml  exporter.yaml  extension.yaml  processor.yaml  receiver.yaml
src/collector_watcher/: __init__.py  detector.py  doc_generator.py  doc_updater.py  github_release_detector.py  inventory.py  multi_repo_scanner.py  parser.py  pr_creator.py  reporter.py  runner.py  scan_inventory.py  scanner.py  tarball_utils.py  version_detector.py  versioned_scanner.py
src/docs_automation/: __init__.py  changelog_generator.py  doc_generator.py  doc_updater.py  fix_spelling.py  update_docs.py
tests/: test_detector.py  test_doc_generator.py  test_doc_updater.py  test_inventory.py  test_multi_repo_scanner.py  test_parser.py  test_pr_creator.py  test_reporter.py  test_scanner.py  test_version_detector.py
tests/collector_watcher/: __init__.py  test_github_release_detector.py  test_inventory.py  test_multi_repo_scanner.py  test_parser.py  test_scanner.py  test_version_detector.py
tests/docs_automation/: __init__.py  test_changelog_generator.py  test_doc_generator.py  test_doc_updater.py  test_fix_spelling.py  test_update_docs.py  test_version_mismatch_bugfix.py
(+169 files in other folders)
